Fix bleed through during animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Give the parent element a background color so overlapping panes don't show through */
-.workspace-leaf:not(.mod-active) {
+.workspace-leaf {
     background-color: inherit;
 }
 
